# GimbalROS

./: .gitmodules  README.md
controls/: CMakeLists.txt  package.xml
controls/config/: params.yaml
controls/include/nodes/: control_node.h
controls/launch/: control_node.launch.py
controls/src/nodes/: control_node.cpp
estimation/: CMakeLists.txt  package.xml
estimation/config/: params.yaml
estimation/include/nodes/: estimation_node.h
estimation/src/: estimation_node.cpp
estimation/src/nodes/: estimation_node.cpp
messages/: CMakeLists.txt  package.xml
messages/msg/: AttitudeEstimation.msg  AttitudeMeasurement.msg  BodyRates.msg  Control.msg  DesiredAttitude.msg  Quaternion.msg  SensorData.msg  SystemEngaged.msg
